tests/specs/run/error_002/error_002.ts.out
[WILDCARD]error: Uncaught (in promise) Error: exception from mod1
  throw Error("exception from mod1");
        ^
    at throwsError ([WILDCARD]/mod1.ts:16:9)
    at foo ([WILDCARD]/error_002.ts:4:3)
    at [WILDCARD]/error_002.ts:7:1
